--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
   <main id="contenido-principal">
     <section class="seccion reveal">
-      <h1 class="nombres">David & Mónica </h1>
+      <h1 class="nombres">David Y Mónica </h1>
       <h2 class="titulo "> ¡Nos casamos!</h2>
-      <p class="fecha">12:00 hrs - 27 / 06 / 26 </p>
+      <p class="fecha"> 27 / 06 / 26 - 12:00 hrs </p>
       <p>Iglesia San Nicolás de Bari, Burgos</p>
       <!-- Flecha animada -->
       <i class="fa-solid fa-arrow-down scroll-icon"></i>
@@ -53,7 +53,7 @@
 
     <section class="seccion reveal">
       <h2><i class="fas fa-church"> </i> Ceremonia</h2>
-      <p>El lugar de la ceremonia será la <strong>Iglesia San Nicolás de Bari</strong> en Burgos a las 12:00 h.</p>
+      <p>El lugar de la ceremonia será en la <strong>Iglesia San Nicolás de Bari</strong> en Burgos a las 12:00 h.</p>
       <iframe src="https://www.google.com/maps?q=Iglesia+San+Nicol%C3%A1s+de+Bari,+Burgos&output=embed"
         title="Mapa de ubicación de la Iglesia San Nicolás de Bari" allowfullscreen loading="lazy"></iframe>
       <i class="fa-solid fa-arrow-down scroll-icon"></i>
@@ -61,7 +61,7 @@
 
     <section class="seccion reveal">
       <h2><i class="fas fa-champagne-glasses"> </i> Banquete</h2>
-      <p>El lugar del banquete será el <strong>Hotel Abba</strong> en Burgos.</p>
+      <p>El lugar del banquete será en el <strong>Hotel Abba</strong> en Burgos a las 14:00 h.</p>
       <p>Tiene plazas limitadas de parking y un 10% de descuento para huéspedes.</p>
       <div>
         <a href="https://www.google.com/maps?q=Calle+Fern%C3%A1n+Gonz%C3%A1lez,+72,+09003+Burgos" target="_blank"
@@ -183,3 +183,4 @@
 
 </body>
 </html>
+
