--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <main id="contenido-principal">
     <section class="seccion reveal">
-      <h1 class="nombres">David Y Mónica </h1>
+      <h1 class="nombres">David y Mónica </h1>
       <h2 class="titulo "> ¡Nos casamos!</h2>
       <p class="fecha"> 27 / 06 / 26 - 12:00 hrs </p>
       <p>Iglesia San Nicolás de Bari, Burgos</p>
@@ -183,5 +183,6 @@
 
 </body>
 </html>
+
 
 
