--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <p>Estar juntos ese día para nosotros es lo más importante, pero para el que pueda y quiera, os dejamos nuestro
         número de cuenta:</p>
       <div class="cuenta-container">
-        <span id="ibanText" class="cuenta">ES062100558545020032</span>
+        <span id="ibanText" class="cuenta">ES0621005585450200323550</span>
         <button class="boton copiar-btn" onclick="copiarIBAN()">
           <i class="fas fa-copy"></i> Copiar
         </button>
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
