--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="seccion reveal">
       <h2><i class="fas fa-champagne-glasses"> </i> Banquete</h2>
       <p>El lugar del banquete será el <strong>Hotel Abba</strong> en Burgos a las 14:00 h.</p>
-      <p>Tiene plazas limitadas de parking y un 10% de descuento para huéspedes.</p>
+      <p>Tiene plazas limitadas de parking y un 10% de descuento para huéspedes (hay que llamar al hotel para conseguirlo).</p>
       <div>
         <a href="https://www.google.com/maps?q=Calle+Fern%C3%A1n+Gonz%C3%A1lez,+72,+09003+Burgos" target="_blank"
           class="boton" aria-label="Ver ubicación del Hotel Abba en Google Maps">
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
